fix: add gap in header

--- a/sigaus-tool/src/app/layout/header/header.component.scss
+++ b/sigaus-tool/src/app/layout/header/header.component.scss
@@ -1,10 +1,11 @@
 .header {
-    display: flex;
-    align-items: center;
-    height: 40px;
-    padding: 0 10px;
-    background-color: white;
-    border-bottom: 1px solid #eee;
+  display: flex;
+  align-items: center;
+  height: 40px;
+  padding: 0 10px;
+  background-color: white;
+  gap: 10rem;
+  border-bottom: 1px solid #eee;
   }
   
   /* Sección izquierda */
